botones de portfolio, base

--- a/src/assets/scss/now-ui-kit/mixins/_buttons.scss
+++ b/src/assets/scss/now-ui-kit/mixins/_buttons.scss
@@ -21,7 +21,7 @@
     }
 
     &:hover{
-        box-shadow:  0 3px 8px 0 rgba(0,0,0, 0.17);
+        box-shadow:  0 3px 8px 0 rgba(255, 116, 116, 0.17);
     }
 
     &.disabled,
