--- a/src/assets/scss/now-ui-kit/_typography.scss
+++ b/src/assets/scss/now-ui-kit/_typography.scss
@@ -73,7 +73,8 @@ p{
 
 .title{
     font-weight: $font-weight-bold;
-    padding-top: 30px;
+    padding-top: 10px;
+    margin-bottom: 10px;
 
 
     &.title-up{
