--- a/src/assets/scss/now-ui-kit/_variables.scss
+++ b/src/assets/scss/now-ui-kit/_variables.scss
@@ -42,9 +42,9 @@ $opacity-2:                  rgba(255,255,255, .2) !default;
 $transparent-bg:             transparent !default;
 $dark-background:            #555555 !default;
 
-$default-color:              #888888 !default;
-$default-states-color:       lighten($default-color, 6%) !default;
-$default-color-opacity:      rgba(182, 182, 182, .6) !default;
+$default-color:              #000000 !default;
+$default-states-color:       #555555 !default;
+$default-color-opacity:      rgba(180, 158, 158, 0.6) !default;
 
 $primary-color:              #272220 !default;
 $primary-states-color:       lighten($primary-color, 6%) !default;
