--- a/src/assets/scss/now-ui-kit/_variables.scss
+++ b/src/assets/scss/now-ui-kit/_variables.scss
@@ -43,8 +43,8 @@ $transparent-bg:             transparent !default;
 $dark-background:            #555555 !default;
 
 $default-color:              #000000 !default;
-$default-states-color:       #555555 !default;
-$default-color-opacity:      rgba(180, 158, 158, 0.6) !default;
+$default-states-color:       #ffbc2b !default;
+$default-color-opacity:      rgba(175, 175, 175, 0.6) !default; 
 
 $primary-color:              #272220 !default;
 $primary-states-color:       lighten($primary-color, 6%) !default;
