--- a/src/assets/scss/now-ui-kit/mixins/_buttons.scss
+++ b/src/assets/scss/now-ui-kit/mixins/_buttons.scss
@@ -100,7 +100,7 @@
             &:hover,
             &:focus,
             &:active{
-                color: $default-states-color;
+                color: $adm-identity;
             }
         }
 
