--- a/src/assets/scss/now-ui-kit/_buttons.scss
+++ b/src/assets/scss/now-ui-kit/_buttons.scss
@@ -10,7 +10,7 @@
     padding: $padding-btn-vertical $padding-btn-horizontal;
     cursor: pointer;
 
-    @include btn-styles($default-color, $default-states-color);
+    @include btn-styles($default-color, $adm-identity);
 
     &:hover,
     &:focus{
@@ -80,7 +80,7 @@
 }
 
 // Apply the mixin to the buttons
-// .btn-default { @include btn-styles($default-color, $default-states-color); }
+// .btn-default { @include btn-styles($default-color, $adm-identity); }
 .btn-primary { @include btn-styles($primary-color, $primary-states-color); }
 .btn-success { @include btn-styles($success-color, $success-states-color); }
 .btn-info    { @include btn-styles($info-color, $info-states-color); }
