--- a/src/assets/scss/now-ui-kit/_variables.scss
+++ b/src/assets/scss/now-ui-kit/_variables.scss
@@ -1,3 +1,5 @@
+//$adm-identity:               #ef7d00 !default;
+$adm-identity:               #ee701cee !default;
 //== Buttons
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
@@ -17,7 +19,7 @@ $light-black:                #444    !default;
 
 $black-bg:                   rgba(30,30,30,.97) !default;
 
-$black-color:                #2c2c2c !default;
+$black-color:                #000000 !default;
 $black-hr:                   #444444 !default;
 
 $light-gray:                 #E3E3E3 !default;
@@ -43,11 +45,10 @@ $transparent-bg:             transparent !default;
 $dark-background:            #555555 !default;
 
 $default-color:              #000000 !default;
-$default-states-color:       #ffbc2b !default;
 $default-color-opacity:      rgba(175, 175, 175, 0.6) !default; 
 
 $primary-color:              #272220 !default;
-$primary-states-color:       lighten($primary-color, 6%) !default;
+$primary-states-color:       lighten($adm-identity, 6%) !default;
 $primary-color-opacity:      rgba(249, 99, 50, .3) !default;
 $primary-color-alert:        rgba(249, 99, 50, .8) !default;
 
@@ -61,7 +62,7 @@ $info-states-color:          lighten($info-color, 6%) !default;
 $info-color-opacity:         rgba(44, 168, 255, .3) !default;
 $info-color-alert:           rgba(44, 168, 255, .8) !default;
 
-$warning-color:              #FFB236 !default;
+$warning-color:              $adm-identity;
 $warning-states-color:       lighten($warning-color, 15%) !default;
 $warning-color-opacity:      rgba(255, 178, 54, .3) !default;
 $warning-color-alert:        rgba(255, 178, 54, .8) !default;
